add code examples

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#skills" class="nav-item">Skills</a>
         <a href="#education" class="nav-item">Education</a>
         <a href="#experience" class="nav-item">Experience</a>
-        <a href="#recomendations" class="nav-item">Recomendations</a>
+        <a href="#code-examples" class="nav-item">Code Examples</a>
     </nav>
     <header class="header">
 
@@ -34,7 +34,7 @@
                     <a href="#skills" class="mobile-nav-item">Skills</a>
                     <a href="#education" class="mobile-nav-item">Education</a>
                     <a href="#experience" class="mobile-nav-item">Experience</a>
-                    <a href="#recomendations" class="mobile-nav-item">Recomendations</a>
+                    <a href="#code-examples" class="mobile-nav-item">Code Examples</a>
                 </div>
             </div>
             <div class="wrapper">
@@ -61,7 +61,7 @@
                         <a href="#skills" class="nav-item">Skills</a>
                         <a href="#education" class="nav-item">Education</a>
                         <a href="#experience" class="nav-item">Experience</a>
-                        <a href="#recomendations" class="nav-item">Recomendations</a>
+                        <a href="#code-examples" class="nav-item">Code Examples</a>
                     </nav>
 
                 </div>
@@ -258,39 +258,37 @@
     <footer class="footer white-theme">
         <div class="wrapper">
             <div class="content-title">
-                <a name="recomendations"></a>
-                <h3>Recomendations</h3>
+                <a name="code-examples"></a>
+                <h3>Code Examples</h3>
             </div>
 
             <div class="container">
                 <div class="row">
                     <div class="item">
-                        <b>Vladimir Putin, President</b>
-                        <p><span>8 800 200 23 16</span></p>
-                        <p><span> Kremlin, Moscow, Russia</span> </p>
-                        <a href="http://www.kremlin.ru/" target="_blank">www.kremlin.ru</a>
+                        <h5>Bubble-canvas</h5>
+                        <!-- <canvas id="canvasBubblesMini" class="canvas-bubbles-mini"></canvas> -->
+                        <a href="https://github.com/Saleyevav/bubble-canvas" target="_blank">github.com</a><br>
+                        <a href="https://codesandbox.io/s/bubble-canvas-c12nv1" target="_blank">codesandbox.io</a>
                     </div>
                     <div class="item">
-                        <b>Vladimir Putin, President</b>
-                        <p><span>8 800 200 23 16</span></p>
-                        <p><span> Kremlin, Moscow, Russia</span> </p>
-                        <a href="http://www.kremlin.ru/" target="_blank">www.kremlin.ru</a>
+                        <h5>Bubbles-connection</h5>
+                        <canvas id="bubblesConnectionMini" class="canvas-mini"></canvas>
+                        <a href="https://github.com/Saleyevav/bubbles-connection" target="_blank">github.com</a><br>
+                        <a href="#" target="_blank">codesandbox.io</a>
                     </div>
 
                 </div>
 
                 <div class="row">
                     <div class="item">
-                        <b>Vladimir Putin, President</b>
-                        <p><span>8 800 200 23 16</span></p>
-                        <p><span> Kremlin, Moscow, Russia</span> </p>
-                        <a href="http://www.kremlin.ru/" target="_blank">www.kremlin.ru</a>
+                        <h5>matrix-rain</h5>
+                        <canvas id="canvasRainMini" class="canvas-mini"></canvas><br>
+                        <a href="https://github.com/Saleyevav/matrix-rain" target="_blank">github.com</a><br>
+                        <a href="#" target="_blank">codesandbox.io</a>
+                      
                     </div>
                     <div class="item">
-                        <b>Vladimir Putin, President</b>
-                        <p><span>8 800 200 23 16</span></p>
-                        <p><span> Kremlin, Moscow, Russia</span> </p>
-                        <a href="http://www.kremlin.ru/" target="_blank">www.kremlin.ru</a>
+                        
                     </div>
                 </div>
 
