add codesandbox links

--- a/index.html
+++ b/index.html
@@ -272,19 +272,19 @@
                     </div>
                     <div class="item">
                         <h5>Bubbles-connection</h5>
-                        <canvas id="bubblesConnectionMini" class="canvas-mini"></canvas>
+                        <canvas id="bubblesConnectionMini" class="canvas-mini"></canvas><br>
                         <a href="https://github.com/Saleyevav/bubbles-connection" target="_blank">github.com</a><br>
-                        <a href="#" target="_blank">codesandbox.io</a>
+                        <a href="https://codesandbox.io/s/bubbles-connect-usdzj9" target="_blank">codesandbox.io</a>
                     </div>
 
                 </div>
 
                 <div class="row">
                     <div class="item">
-                        <h5>matrix-rain</h5>
+                        <h5>Matrix-rain</h5>
                         <canvas id="canvasRainMini" class="canvas-mini"></canvas><br>
                         <a href="https://github.com/Saleyevav/matrix-rain" target="_blank">github.com</a><br>
-                        <a href="#" target="_blank">codesandbox.io</a>
+                        <a href="https://codesandbox.io/s/matrix-rain-ok0gjw" target="_blank">codesandbox.io</a>
                       
                     </div>
                     <div class="item">
