add bubble - mini canvas

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="row">
                     <div class="item">
                         <h5>Bubble-canvas</h5>
-                        <!-- <canvas id="canvasBubblesMini" class="canvas-bubbles-mini"></canvas> -->
+                        <canvas id="canvasBubblesMini" class="canvas-mini"></canvas><br>
                         <a href="https://github.com/Saleyevav/bubble-canvas" target="_blank">github.com</a><br>
                         <a href="https://codesandbox.io/s/bubble-canvas-c12nv1" target="_blank">codesandbox.io</a>
                     </div>
