--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                         <div class="btns">
                             <a id="downloadCVbtn" href="#" class="btn">Download CV in PDF</a>
-                            <a id="contactMebtn" href="#" class="btn">Contact me</a>
+                            <a id="contactMebtn" href="mailto:saleyevav@yandex.ru" class="btn">Contact me</a>
                         </div>
 
                     </div>
