--- a/index.html
+++ b/index.html
@@ -296,10 +296,12 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/typeWriter.js"></script>
     <script src="js/matrix-rain.js"></script>
     <script src="js/bubbles.js"></script>
     <script src="js/bubbles-connection.js"></script>
+    <script src="js/scroll-listener.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
