--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </h1>
 
                         <div class="btns">
-                            <a id="downloadCVbtn" href="#" class="btn">Download CV in PDF</a>
+                            <a id="downloadCVbtn" href="/pdf/SaleyevAlexandr.pdf" class="btn">Download CV in PDF</a>
                             <a id="contactMebtn" href="mailto:saleyevav@yandex.ru" class="btn">Contact me</a>
                         </div>
 
@@ -231,13 +231,13 @@
                     <ul>
                         <li>
                             <a href="https://ezan.ac.ru/" target="_blank">ФГУП ЭЗАН, Chernogolovka, Russia</a>
-                            <p><span>2021 - ...</span> </p>
+                            <p><span>2020 - ...</span> </p>
                             <p>System support engineer</p>
                             <br>
                         </li>
                         <li>
                             <a href="https://trytek.ru/" target="_blank">OOO "Трайтэк", Kirzhach, Russia</a>
-                            <p><span>2015 - 2021</span> </p>
+                            <p><span>2015 - 2020</span> </p>
                             <p>Оptical cable splice specialist</p>
                             <br>
                         </li>
