change downloadCVbtns href

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </h1>
 
                         <div class="btns">
-                            <a id="downloadCVbtn" href="/pdf/SaleyevAlexandr.pdf" class="btn">Download CV in PDF</a>
+                            <a id="downloadCVbtn" href="https://github.com/Saleyevav/my-cv/raw/main/pdf/SaleyevAlexandr.pdf" class="btn">Download CV in PDF</a>
                             <a id="contactMebtn" href="mailto:saleyevav@yandex.ru" class="btn">Contact me</a>
                         </div>
 
