--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="container">
                     <div class="main-title">
                         <h1>
-                            Full stack developer portfolio main page
+                            Web developer portfolio main page
                         </h1>
 
                         <div class="btns">
